fabrique-derive/tests/ui/derive_on_tuple_struct.rs
use fabrique_derive::Factory;

#[derive(Factory)]
struct Anvil(u32, u32);

fn main() {}